# libmaus2

./: .gitignore  CMakeLists.txt  README.md
src/libmaus2/: StaticInitialization.cpp
src/libmaus2/aio/: ArrayFile.hpp  ArrayInputStreamFactory.hpp  FileFragment.hpp  InputOutputStream.hpp  InputOutputStreamFactory.hpp  InputOutputStreamFactoryContainer.hpp  InputOutputStreamWrapper.hpp  InputStream.hpp  InputStreamFactory.hpp  InputStreamFactoryContainer.hpp  InputStreamInstance.hpp  InputStreamPointerWrapper.hpp  InputStreamWrapper.hpp  MemoryFile.hpp  MemoryFileAdapter.hpp  MemoryFileContainer.hpp  MemoryInputOutputStream.hpp  MemoryInputOutputStreamFactory.hpp  MemoryInputStream.hpp  MemoryInputStreamBuffer.hpp  MemoryInputStreamFactory.hpp  MemoryOutputStream.hpp  MemoryOutputStreamFactory.hpp  NamedTemporaryFile.hpp  OutputStream.hpp  OutputStreamFactory.hpp  OutputStreamFactoryContainer.hpp  OutputStreamInstance.hpp  OutputStreamPointerWrapper.hpp  OutputStreamWrapper.hpp  PosixFdInput.hpp  PosixFdInputOutputStream.hpp  PosixFdInputOutputStreamFactory.hpp  PosixFdInputStream.hpp  PosixFdInputStreamBuffer.hpp  PosixFdInputStreamFactory.hpp  PosixFdOutputStream.hpp  PosixFdOutputStreamBuffer.hpp  PosixFdOutputStreamFactory.hpp  PutOutputIterator.hpp  (+7 more)
src/libmaus2/alignment/: SimpleLocalAligner.hpp
src/libmaus2/autoarray/: AutoArray.cpp  AutoArray.hpp  GenericAlignedAllocation.hpp
src/libmaus2/bambam/: AdapterFilter.hpp  BamAlignment.hpp  BamAlignmentDecoder.hpp  BamAlignmentDecoderFactory.hpp  BamAlignmentSortingCircularHashEntryOverflow.hpp  BamAuxFilterVector.hpp  BamBlockWriterBaseFactory.hpp  BamCat.hpp  BamHeader.hpp  BamHeaderLowMem.hpp  BamHeaderUpdate.hpp  BamMergeTemplate.hpp  BamMultiAlignmentDecoderFactory.hpp  BamNumericalIndexDecoder.hpp  BamRangeDecoder.hpp  ChecksumsFactory.cpp  GeneFlatFile.hpp  ReadEndsBlockDecoderBase.hpp  ReadEndsBlockDecoderBaseCollectionInfo.hpp  ReadEndsContainer.hpp  SamDecoder.hpp  SamInfo.hpp  SnappyAlignmentMergeInput.hpp  SortedFragDecoder.hpp
src/libmaus2/bambam/parallel/: BlockMergeControl.hpp  BlockSortControl.hpp  GenericInputControlStreamInfo.hpp  ParseInfo.hpp
src/libmaus2/bitbtree/: bitbtree.hpp
src/libmaus2/bitio/: BitStreamFileDecoder.hpp  CompactArray.hpp  CompactQueue.hpp  FastWriteBitWriter.hpp  OutputBuffer.hpp
src/libmaus2/bp/: BalancedParenthesesBase.hpp
src/libmaus2/dazzler/align/: AlignmentWriter.hpp  LASToBamConverterBase.hpp  LasIntervals.hpp  OverlapIndexer.hpp  SortingOverlapOutputBuffer.hpp
src/libmaus2/dazzler/db/: DatabaseFile.hpp
src/libmaus2/dazzler/stringgraph/: StringGraph.hpp
src/libmaus2/digest/: DigestFactory.hpp  DigestFactoryContainer.hpp  DigestFactory_CRC32C_SSE42.cpp  DigestFactory_CRC32C_SSE42.hpp  DigestFactory_SHA2_ASM.cpp  DigestFactory_SHA2_ASM.hpp
src/libmaus2/exception/: LibMausException.hpp
src/libmaus2/fastx/: CompactFastQContainer.hpp  DNAIndexMetaData.hpp  DNAIndexMetaDataBigBand.hpp  DNAIndexMetaDataBigBandBiDir.hpp  FastABgzfIndex.hpp  FastAIndex.hpp  FastAReader.hpp  FastInterval.hpp  FastQReader.hpp  FastaBPDecoder.hpp  FqWeightQuantiser.hpp  QReorder.hpp
src/libmaus2/fm/: FA4CompactSampledSuffixArray.hpp  FM.hpp  KmerCache.hpp  SampledISA.hpp  SampledSA.hpp
src/libmaus2/hashing/: ConstantStringHash.hpp
src/libmaus2/huffman/: CanonicalEncoder.hpp  HuffmanTree.hpp  IndexDecoderDataArray.hpp  IndexLoader.hpp  RLDecoder.hpp
src/libmaus2/irods/: IRodsInputStreamFactory.hpp  IRodsSystem.cpp  IRodsSystem.hpp
src/libmaus2/lcp/: SuccinctLCP.hpp  WaveletLCP.hpp  WaveletLCPResult.hpp
src/libmaus2/lcs/: AlignerFactory.cpp  AlignmentOneAgainstManyFactory.hpp  BandedAlignerFactory.cpp  NNPTraceContainer.hpp
src/libmaus2/lf/: ImpCompactHuffmanWaveletLF.hpp  ImpHuffmanWaveletLF.hpp  RLIndexLF.hpp
src/libmaus2/lz/: CompressorObjectFreeListAllocatorFactory.hpp  SnappyCompressorObjectFactory.hpp  SnappyDecompressorObjectFactory.hpp  SnappyInputStreamArrayFile.hpp  SnappyOffsetFileInputStream.hpp  StreamWrapperBuffer.hpp  ZlibCompressorObjectFactory.hpp  ZlibDecompressorObjectFactory.hpp  ZlibInterface.cpp
src/libmaus2/math/: lowbits.hpp
src/libmaus2/network/: FtpSocket.hpp  FtpSocketInputStreamBuffer.hpp  GnuTLSSocket.cpp  GnuTLSSocket.hpp  HttpHeader.hpp  HttpSocketInputStreamBuffer.hpp  Socket.hpp  SocketInputStream.hpp  UrlInputStream.hpp  UrlInputStreamBufferWrapper.hpp  UrlInputStreamFactory.hpp
src/libmaus2/parallel/: OMPLock.hpp  PosixConditionSemaphore.hpp  PosixMutex.hpp  PosixSemaphore.hpp  PosixSpinLock.hpp  PosixThread.hpp  SimpleSemaphoreInterface.hpp  SynchronousQueue.hpp  TimedSemaphoreInterface.hpp
src/libmaus2/rank/: DNARank.hpp  DNARankBiDir.hpp  ImpCacheLineRank.hpp  RunLengthBitVector.hpp
src/libmaus2/rl/: RLIndex.hpp
src/libmaus2/rmq/: CartesianTree.hpp  RMMTree.hpp
src/libmaus2/sorting/: SortingBufferedOutputFile.hpp
src/libmaus2/suffixsort/: BwtMergeBlockSortRequest.hpp  CircularSuffixComparator.hpp  GapArrayByte.hpp  GapArrayByteDecoder.hpp  OSInduce.hpp  SAISUtils.hpp  SuccinctFactorList.hpp
src/libmaus2/suffixsort/bwtb3m/: BwtMergeSortResult.cpp  BwtMergeSortTemplate.hpp
src/libmaus2/trie/: TrieState.hpp
src/libmaus2/uint/: uint.hpp
src/libmaus2/util/: ArgInfo.hpp  Array864.hpp  ConcatRequest.cpp  Destructable.hpp  GenericIntervalTree.cpp  Histogram.hpp  HistogramSet.cpp  HugePages.cpp  HugePages.hpp  ImpCompactNumberArray.hpp  LongestIncreasingSubsequence.hpp  NumberSerialisation.hpp  OctetString.cpp  SimpleBloomFilter.hpp  SimpleCountingHash.hpp  SimpleHashMap.hpp  SimpleHashSet.hpp  StringSerialisation.cpp  StringSerialisation.hpp  Utf8BlockIndex.cpp  Utf8String.cpp
src/libmaus2/wavelet/: DynamicHuffmanWaveletTree.hpp  DynamicWaveletTree.hpp  HuffmanWaveletTree.hpp  ImpCompactHuffmanWaveletTree.hpp  ImpHuffmanWaveletTree.hpp  RlToHwtBase.hpp  RlToHwtTermRequest.hpp
src/test/: testOS.cpp  testbamcat.cpp  testbamindex.cpp  testbammergecoordinate.cpp  testbammergequeryname.cpp  testlognormal.cpp  testlowmembamheaderparser.cpp  testthreadpool.cpp  testthreadpoolbamdecode.cpp
